<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一起</string>
    
    <string name="btn_login">登录</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_register">注册</string>
    
    <string name="tip_account_type">可以用以下账号登陆</string>
    <string name="tip_account_normal">或者</string>
    <string name="tip_account_tencent">QQ登录</string>
    <string name="tip_account_sina">微博登录</string>
    <string name="tip_loading">加载中。。。</string>
    <string name="tip_load_fail">网络不给力啊亲，加载失败了。。。</string>
    <string name="tip_load_search_empty">暂时没有发现活动哦，换个条件试试吧</string>
    <string name="tip_reload">"&lt;u&gt;点击重试&lt;/u&gt;"</string>
    <string name="tip_pull_to_refresh_tap">点击刷新</string>
    <string name="tip_pull_to_refresh_pull">下拉可以刷新</string>
    <string name="tip_pull_to_refresh_release">松开可以刷新</string>
    <string name="tip_pull_to_refresh_refreshing">加载中</string>
    <string name="tip_pull_to_refresh_time">最近更新于:%s</string>
    <string name="tip_more">更多</string>
    <string name="tip_event_author">活动发起人：  %s</string>
    <string name="tip_event_address">活动地址：  %s</string>
    <string name="tip_event_time">活动时间：  %s</string>
    
    <string name="format_last_login_time">最近登录时间：yyyy-MM-dd HH:mm</string>
    
    <string name="hint_account">请输入您的用户名</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="hint_nick">请输入您的昵称</string>
    
    <string name="error_crash">抱歉，程序出现异常，即将退出</string>
    <string name="error_network">网络不给力啊，等等再试吧</string>
    <string name="error_server">网络不给力啊，等等再试吧</string>
    <string name="error_unrecognized">网络不给力啊，等等再试吧</string>
    <string name="error_key_time_out">网络不给力啊，等等再试吧</string>
    <string name="error_sina">微博认证失败了T.T</string>
    <string name="error_tencent">QQ认证失败了T.T</string>
    
    <string name="toast_account_empty">请输入您的帐号</string>
    <string name="toast_password_empty">请输入您的密码</string>
    <string name="toast_name_empty">请输入您的昵称</string>
    <string name="toast_sina_success">微博登录成功</string>
    <string name="toast_tencent_success">QQ登录成功</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_register_success">注册成功</string>
    
    <string name="dialog_loading">处理中</string>
    <string name="dialog_create_account">正在为您生成一起帐号</string>
    
    <string name="title_tencent_auth">授权</string>
    <string name="title_register">注册</string>
    <string name="title_login">登录</string>
</resources>