<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:scrollbars="none">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:scrollbars="none">
        
        <include 
            layout="@layout/view_title"
            android:id="@+id/title_container"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:scrollbars="none">

        
            <EditText
                android:id="@+id/account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_account"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            
            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nick"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            
            <Button 
                android:id="@+id/regBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>