<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:scrollbars="none"
    tools:context=".MainActivity">
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:scrollbars="none"
	    tools:context=".MainActivity">
	    
	    <include 
	        layout="@layout/view_title"
	        android:id="@+id/title_container"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:orientation="vertical"
	        android:gravity="center_horizontal"
	        android:scrollbars="none">
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tip_account_type"
	            android:textSize="@dimen/text_size_small"/>
	        
	        <HorizontalScrollView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/activity_vertical_margin"
	            android:scrollbars="none">
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:gravity="center"
	                android:scrollbars="none"
	                android:layout_gravity="center_horizontal">
	                <LinearLayout
	                    android:id="@+id/login_tencent"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:orientation="vertical"
	                    android:gravity="center_horizontal"
	                    android:scrollbars="none"
	                    android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
	                    android:layout_gravity="center_horizontal">
	                    <ImageView
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:src="@drawable/ic_launcher"/>
	                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tip_account_tencent"
                            android:textSize="@dimen/text_size_normal"
                            android:textColor="@color/black"/>
	                </LinearLayout>
	                <LinearLayout
                        android:id="@+id/login_sina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:scrollbars="none"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tip_account_sina"
                            android:textSize="@dimen/text_size_normal"
                            android:textColor="@color/black"/>
                    </LinearLayout>
	            </LinearLayout>
            </HorizontalScrollView>
            
	        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_account_normal"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
	    
	        <EditText
	            android:id="@+id/account"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/hint_account"
	            android:singleLine="true"
	            android:textSize="@dimen/text_size_normal"
	            android:textColor="@color/black"
	            android:layout_marginTop="@dimen/activity_vertical_margin"/>
	        
	        <EditText
	            android:id="@+id/password"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            android:hint="@string/hint_password"
	            android:singleLine="true"
	            android:textSize="@dimen/text_size_normal"
	            android:textColor="@color/black"
	            android:layout_marginTop="@dimen/activity_vertical_margin"/>
	        
	        <Button 
	            android:id="@+id/loginBtn"
	            android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
