<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <include 
        layout="@layout/view_title"
        android:id="@+id/title_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"/>
    <LinearLayout
        android:id="@+id/content_view"
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:visibility="gone">
	    <com.together.app.ui.PullToRefreshListView
	        android:id="@+id/event_list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_loading" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loading_fail_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_load_fail" />

        <TextView
            android:id="@+id/reloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_loading" />
    </LinearLayout>
    <TextView
        android:id="@+id/loading_empty_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/tip_load_search_empty"/>
</LinearLayout>